--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/vikram1995/splitwise-backend#readme",
   "dependencies": {
     "mocha": "^7.2.0",
-    "mongoose": "^5.9.16"
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.24"
   }
 }
